--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Tablica kanban</title>
+    <title>Kanban board</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div id="board" class="board">
-        <h1>Tablica kanban</h1>
-        <button class="create-column">Dodaj kolumnę</button>
+        <h1>Kanban board</h1>
+        <button class="create-column">Add column</button>
         <div class="column-container"></div>
 	</div>
 
